# serde_closure

./: Cargo.toml  README.md
serde_closure_derive/: Cargo.toml
serde_closure_derive/src/: lib.rs
src/: lib.rs
