[workspace]

[package]
name = "serde_closure"
version = "0.3.2"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","encoding","rust-patterns","network-programming"]
keywords = ["closure","serialization","serde","distributed"]
description = """
Serializable and debuggable closures.

This library provides macros that wrap closures to make them serializable and debuggable.
"""
repository = "https://github.com/alecmocatta/serde_closure"
homepage = "https://github.com/alecmocatta/serde_closure"
documentation = "https://docs.rs/serde_closure"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/serde_closure", pipeline = "tests", build = "10" }
maintenance = { status = "actively-developed" }

[dependencies]
serde_closure_derive = { version = "=0.3.2", path = "serde_closure_derive" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }

[target.'cfg(not(all(target_env = "sgx", target_vendor = "mesalock")))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_libc = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[build-dependencies]
rustversion = "1.0"

[dev-dependencies]
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
bincode = { git = "https://github.com/mesalock-linux/bincode-sgx" }

[features]
default = ["std", "mesalock_sgx"]
std = []
dummy = []
mesalock_sgx = ["sgx_tstd", "sgx_trts", "sgx_libc"]